<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewEmpty"
            style="@style/default_style_imageView_include"
            android:contentDescription="@string/empty"
            app:layout_constraintBottom_toTopOf="@+id/buttonRetryEmpty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/empty" />

        <TextView
            android:id="@+id/textViewEmpty"
            style="@style/default_style_textView_error_include"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textColor="#57A6FF"
            app:layout_constraintTop_toBottomOf="@+id/imageViewEmpty" />

        <TextView
            android:id="@+id/textViewDetailInfo"
            style="@style/default_style_textView_details_info_include"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_info"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmpty" />

        <Button
            android:id="@+id/buttonRetryEmpty"
            style="@style/default_margins_for_default_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>