<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewSomethingError"
            style="@style/default_style_imageView_include"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/something_error"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/buttonRetrySomethingError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sometimes_error" />

        <TextView
            android:id="@+id/textViewSomethingError"
            style="@style/default_style_textView_error_include"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/something_error"
            app:layout_constraintTop_toBottomOf="@+id/imageViewSomethingError" />

        <TextView
            android:id="@+id/textViewCheckSomethingError"
            style="@style/default_style_textView_details_info_include"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_something_error"
            app:layout_constraintTop_toBottomOf="@+id/textViewSomethingError" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonRetrySomethingError"
            app:layout_constraintTop_toBottomOf="@+id/textViewCheckSomethingError" />

        <Button
            android:id="@+id/buttonRetrySomethingError"
            style="@style/default_margins_for_default_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>