<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.RepositoriesListFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/very_dark_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/repositories_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRepos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:itemCount="5"
        tools:listitem="@layout/item_repo" />

    <include
        layout="@layout/connection_error_include"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/buttonRetry"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <include
        layout="@layout/empty_include"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/buttonRetry"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <include
        layout="@layout/something_error_include"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/buttonRetry"
        style="@style/default_margins_for_default_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewRepos" />

    <Button
        android:id="@+id/buttonRefresh"
        style="@style/default_margins_for_default_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarRepoDetails"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>